--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:            ""
 permalink:          /:title/
 
 # Site base hostname & protocol, e.g. http://example.com
-url:                "https://zbabystack.netlify.com/"
+url:                "https://zbabystack.netlify.com"
 
 
 github_editme_path: moxiegirl/docs-new/blob/master
