--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -1,23 +1,6 @@
 - title: Introduction
   docs:
-  - learn/overview
-  - learn/problems
-  - learn/tokens
 
-- title: Components
+- title: SDKs
   docs:
-  - learn/identity
-  - learn/profiles
-
-- title: Reference
-  docs:
-  - learn/faqs
-  - learn/glossary
-
-
-- title: Contributing
-  docs:
-  - learn/contribute
-  - learn/issues
-  - learn/pullrequest
-  - learn/community
+  - android/tutorial
