--- a/_data/navigation_home.yml
+++ b/_data/navigation_home.yml
@@ -18,7 +18,7 @@
 - title: Use the Naming Service
   desc: Managing your account, create new users and exporting data
   icon: cog
-  doc: naming/overview
+  doc: core/naming/introduction
 
 - title: Implement Authentication
   desc: Managing your account, creating new users and exporting data
