Adding in Atlas
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_data/navigation_auth.yml
+++ b/_data/navigation_auth.yml
@@ -1,13 +1,4 @@
-- title: Atlas Overview
-  docs:
-  - auth/overview
-  - auth/workings
-  - auth/compare
-
-- title: How to use
-  docs:
-  - auth/introduction
-  - auth/lookups
-  - auth/addnew
-  - auth/propagate
-  - auth/inventory
+- docs:
+  - core/auth/overview
+  - core/auth/howitworks
+  - core/auth/howtouse
