--- a/_data/navigation_bns.yml
+++ b/_data/navigation_bns.yml
@@ -13,6 +13,7 @@
 - title: How to use BNS
   docs:
   - core/naming/pickname
+  - core/naming/creationhowto
   - core/naming/resolving
   - core/naming/register
   - core/naming/manage
