Fixing broken links
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_data/navigation_home.yml
+++ b/_data/navigation_home.yml
@@ -26,6 +26,6 @@
   doc: common/construction
 
 - title: Blockstack Community
-  desc: Ask questions, view upcoming events, and get support.
+  desc: view upcoming events, become a contributor or evangelist.
   icon: user
   doc: common/community_ref
