Updating statement in footer
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ twitter_username:
 
 # Default footer image settings
 footer:
-    copyright:      "Blockstack"
+    copyright:      "Blockstack Public Benefits Corp."
 
 # Disqus comments shortname, requires Disqus account https://disqus.com/
 # disqus:
