Adding todo-list
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -1,6 +1,7 @@
 - title: Try a tutorial
   docs:
   - browser/hello-blockstack
+  - browser/todo-list
   - browser/blockstack_storage
 
 - title: Work with an SDK
