copy edits and changes
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_org.yml
+++ b/_data/navigation_org.yml
@@ -6,7 +6,7 @@
 - title: Manage Stacks
   docs:
   - org/wallet-intro
-  - org/investors
+  - org/tokenholders
 - title: Whitepapers
   docs:
   - org/whitepaper-tokensale
