Updating with principles
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -1,6 +1,7 @@
 - title: Introduction
 - docs:
-  - browser/dapp_principles
+  - develop/dapp_principles
+
 - title: Try a tutorial
   docs:
   - browser/hello-blockstack
@@ -12,8 +13,14 @@
   - android/tutorial
   - ios/tutorial
 
+- title: Application mining
+  docs:
+  - develop/mining_intro
+  - develop/mining_enroll
+
 - title: Reference
   docs:
   - core/faq_developer
+  - common/mining_faq
   - common/javascript_ref
   - common/core_ref
