--- a/_config.yml
+++ b/_config.yml
@@ -151,6 +151,9 @@ collections:
   core:
     output: true
     basepath: "blockstack/blockstack-core/blob/master/docs"
+  develop:
+    output: true
+    basepath: "moxiegirl/docs.blockstack"
   storage:
     output: true
     basepath: "blockstack/gaia/blob/master/docs"
