Zero to DApp Soft Launch - Adding in images for walkthrough - Work in progress commits: copy down from review - Adding in the part 4 after usability testing
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -2,6 +2,13 @@
 - docs:
   - develop/dapp_principles
 
+- title: Try it! Zero to Dapp
+  docs:
+  - develop/zero_to_dapp_1
+  - develop/zero_to_dapp_2
+  - develop/zero_to_dapp_3
+  - develop/zero_to_dapp_4
+
 - title: Try a tutorial
   docs:
   - browser/hello-blockstack
