--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ twitter:
   image: /assets/img/touch-icon.png
   card: summary
 
+
 # Default footer image settings
 footer:
     copyright:      "Blockstack Public Benefits Corp."
@@ -151,6 +152,7 @@ defaults:
     values:
       comments: true
       image: /assets/img/touch-icon.png
+      description: "Using the Blockstack Ecosystem to develop decentralizied applications (DApps). "
 
 collections:
   android:
