Updating create ID
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -2,7 +2,7 @@
 - docs:
   - develop/dapp_principles
 
-- title: Try it! Zero to Dapp
+- title: Try it! Zero to DApp
   docs:
   - develop/zero_to_dapp_1
   - develop/zero_to_dapp_2
