Setting up FAQs for app mining
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -29,6 +29,6 @@
 - title: Reference
   docs:
   - core/faq_developer
-  - common/mining_faq
+  - develop/appMiningFAQ
   - common/javascript_ref
   - common/core_ref
