Adding in the new wallet Fixes #69, Fixes #68, Fixes #70 Adding in the review commentary Fixes #75 adding security reference Removing Coinlist as a bTC holder
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_org.yml
+++ b/_data/navigation_org.yml
@@ -6,6 +6,8 @@
 - title: Manage Stacks
   docs:
   - org/wallet-intro
+  - org/wallet-install
+  - org/wallet-use
   - org/tokenholders
   - org/voucherholder
 - title: Whitepapers
@@ -14,5 +16,6 @@
   - org/whitepaper-token
 - title: Reference
   docs:
+  - org/secureref
   - org/faq
   - org/terms
