- Adding in storage provider docs - Pulling wallet list from nav (that does out tomorrow)
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_usenew.yml
+++ b/_data/navigation_usenew.yml
@@ -3,9 +3,10 @@
   - browser/browser-introduction
   - browser/local_browser
 
-- title: Identity
+- title: Identity and storage
 - docs:
   - browser/ids-introduction
+  - browser/storage-provider
 
 - title: Reference
 - docs:
