Update for voucher
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_org.yml
+++ b/_data/navigation_org.yml
@@ -7,6 +7,7 @@
   docs:
   - org/wallet-intro
   - org/tokenholders
+  - org/voucherholder
 - title: Whitepapers
   docs:
   - org/whitepaper-tokensale
