Fix and Close #62
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -46,11 +46,11 @@
       },
       {
         "question":"How do I submit my application for App Mining?",
-        "answer": "<p>Complete <a href='https://app.co/mining#'>the submission form on
+        "answer": "<p>Complete <a href='https://app.co/submit#'>the submission form on
         App.co</a>.  We suggest registering several days before the ranking
         deadline — our team needs to verify your details to ensure your app
         qualifies. When you have met all the requirements, you should see your
-        app listed <a href='https://app.co/mining/developer-instructions'>on this page</a>. </p>"
+        app listed <a href='https://app.co/mining/apps'>on this page</a>. </p>"
 
       },
       {
