Adding in new Gaia material Closes #104, Closes #72, Closes #80, Closes #81,Closes #111, Closes blockstack/gaia#184, Closes blockstack/gaia#191 Entering review comments
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -146,6 +146,7 @@ exclude:
   - _data/*.yml
   - _data/*.csv
   - _data/cliRef.json
+  - _storage/digital-ocean-deploy.md
 
 sass:
   style:            compressed
