Fixes #103 by adding technical white paper
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_org.yml
+++ b/_data/navigation_org.yml
@@ -12,6 +12,7 @@
   - org/voucherholder
 - title: Whitepapers
   docs:
+  - org/whitepaper-blockchain
   - org/whitepaper-tokensale
   - org/whitepaper-token
 - title: Reference
