Starting work toward Issue #108 this a start
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -16,6 +16,7 @@
   - browser/todo-list
   - browser/blockstack_storage
   - develop/auth_provider
+  - develop/communityResources
 
 - title: Work with an SDK
   docs:
