Fixing the copyright Closes #116
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ twitter:
 
 # Default footer image settings
 footer:
-    copyright:      "Blockstack Public Benefits Corp."
+    copyright:      "Blockstack Public Benefit Corp."
 
 # Disqus comments shortname, requires Disqus account https://disqus.com/
 # disqus:
