--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -38,7 +38,7 @@
         Your finished app should be available to the public for use. In the future, App
         Mining may reward apps that have taken steps to further decentralize, such as
         utilizing Gaia storage or the publishing your app to the Blockstack Naming
-        System.</p>"
+        System. Test flight apps do not qualify.</p>"
       },
       {
         "question":"Does my app have to be listed on App.co to enter App Mining?",
