--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -38,7 +38,7 @@
         Your finished app should be available to the public for use. In the future, App
         Mining may reward apps that have taken steps to further decentralize, such as
         utilizing Gaia storage or the publishing your app to the Blockstack Naming
-        System.</p>"
+        System. Test flight apps do not qualify.</p>"
       },
       {
         "question":"Does my app have to be listed on App.co to enter App Mining?",
@@ -46,17 +46,17 @@
       },
       {
         "question":"How do I submit my application for App Mining?",
-        "answer": "<p>Complete <a href='https://app.co/submit#'>the submission form on
-        App.co</a>.  We suggest registering several days before the ranking
-        deadline — our team needs to verify your details to ensure your app
-        qualifies. When you have met all the requirements, you should see your
-        app listed <a href='https://app.co/mining/apps'>on this page</a>. </p>"
-
+        "answer": "<p>Complete <a href='https://app.co/submit#'>the submission form on App.co</a>. Blockstack suggests registering several days before the ranking deadline — our team needs to verify your details to ensure your app qualifies. Full enrollment details can be found <a href='https://docs.blockstack.org/develop/mining_enroll.html' target='_blank'>here</a>. When you have met all the requirements, you should see your app listed <a href='https://app.co/mining/apps'>on this page</a>.</p>"
       },
       {
         "question":"How often can I submit my application for App Mining?",
         "answer": "<p>You need only to submit your application once.  Each month after your
         submission, your app is competing in App Mining.  </p>"
+      },
+      {
+        "question":"How do I launch my app on Product Hunt as an app reviewer?",
+        "answer": "<p>Part of the ranking process includes an assessment by the Product Hunt app reviewer via their community vote and their internal team vote. You can find <a href='https://docs.blockstack.org/develop/mining_intro.html' target='_blank'>information on the algorithm in this documentation</a>.</p>
+        <p>Your product's launch on Product Hunt has an impact on your final App Mining ranking as stated in the algorithm information. If your app has not been “hunted” yet on Product Hunt, you have the option to hunt the app independently or to ask Product Hunt to hunt it for you. Make sure you understand the hunting process. Only hunted products can be featured by Product Hunt. More information on successful product hunt launches <a href='https://blog.producthunt.com/how-to-launch-on-product-hunt-7c1843e06399' target='_blank'>can be found on the Product Hunt blog</a>.</p> <p>Blockstack will email each miner about the hunt process at the start of each app mining review cycle. You should feel free to let us know your preference, hunt yourself or by Product Hunt, before the review cycle.</p>"
       },
       {
         "question":"Does my code repository need to be public?",
