Updating to direct to Zero-to-Dapp
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_home.yml
+++ b/_data/navigation_home.yml
@@ -13,7 +13,7 @@
 - title: Build Blockchain Applications
   desc: Learn how to build a blockchain application with Blockstack. Work through web and mobile tutorials.
   icon: code
-  doc: browser/hello-blockstack
+  doc: develop/zero_to_dapp_1
 
 - title: Use the Naming Service
   desc: Work with namespaces, zone files, and other advanced BNS topics.
